connections with datasets fix